Fixed linked-in card alignment Added Contact image photo credit

--- a/portfolio.css
+++ b/portfolio.css
@@ -134,16 +134,15 @@ figcaption {
    unicode-bidi:bidi-override;
    direction: rtl;
    justify-content: center;
+  padding: 0 0 30px 0;
 }
 
 .linked img {
    width:10%;
 }
 
-.LI-badge {
-  padding: 30px 50px;
-  justify-content: center;
-  text-align: center;
+.LI-profile-badge {
+  display:inline-block;
 }
 
 .blog_heading {
